fix(component): use actual field name for sort
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>